--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,23 @@
-version: 0.2
-env:
-  variables:
-    APP_NAME: "kammryndancy"
+version: 0.1
+
 phases:
   install:
-    runtime-versions:
-      nodejs: 14.x
     commands:
-      - echo install process started
-      - if [ -z "${BRANCH}" ]; then echo "BRANCH not set" && exit 1 ; fi
-      - if [ -z "${ENVIRONMENT}" ]; then echo "ENVIRONMENT not set" && exit 1 ; fi
-      - npm install && npm install -g @angular/cl
-    build:
-      commands:
-        - echo build process started now
-        - git checkout $BRANCH
-        - ng build --configuration=$ENVIRONMENT
-      post_build:
-        commands:
-          - echo build process finished, uploading to S3
-          - cd dist/$APP_NAME
-          - ls -la
-          - aws s3 sync . s3://kammryndancy.com/$ENVIRONMENT
+      - echo installing nodejs...
+      - curl -sL https://deb.nodesource.com/setup_14.x | bash -
+      - apt-get install -y nodejs  #aws code build use ubuntu environement
+  pre_build:
+    commands:
+      - echo installing dependencies...
+      - npm i -g @angular/cli
+      - npm install
+  build:
+    commands:
+      # - echo testing...
+      # - echo building...
+      - ng build --prod
+artifacts:
+  files:
+    - "**/*"
+  discard-paths: no
+  base-directory: dist/kammryndancy
