--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,46 +1,38 @@
-name: CI
+name: Kammryn Dancy Site
+
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
+
 jobs:
-  build:
-    # using Ubuntu
+  deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          node-version: "14.x"
-      - uses: actions/cache@v3 # this allows for re-using node_modules caching, making builds a bit faster.
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-2
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-  - name: NPM Install
-    run: npm install
-  - name: NPM Install Angular
-    run: npm install -g @angular/cli > /dev/null
-  - name: Lint
-    run: npm run lint
-  - name: Format
-    run: npm run format
-  - name: NPM build Angular Production
-    run: npm run build:prod
-  - name: Test
-    run: npm run test:ci
-  - name: Test coverage
-    run: npm run test:ci:cov
-  - name: Deploy to my EC2 instance
-    uses: easingthemes/ssh-deploy@v2.1.5
-    with:
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY}}
-      SOURCE: "dist/kammryndancy/"
-      REMOTE_HOST: "ec2-remote-host"
-      REMOTE_USER: "ubuntu"
-      TARGET: "/var/www/html/kammryndancy/"
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm run test:headless
+
+      - name: Build
+        run: npm run build:prod
+
+      - name: Deploy
+        if: success()
+        run: aws s3 sync ./dist/kammryndancy s3://kammryn-dancy-s3
