--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/css/theme"
+              ]
+            },
             "outputPath": "dist/kammryndancy",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -27,7 +32,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/images"
             ],
             "styles": [
               "src/styles.scss"
@@ -93,7 +99,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/css/theme.scss"
             ],
             "scripts": []
           }
