--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Deploy
         if: success()
-        run: aws s3 sync ./dist/kammryndancy s3://kammryn-dancy-s3
+        run: aws s3 sync ./dist/kammryndancy s3://kammryndancy.com
